Update Blog “2019-05-23-remuv”

--- a/src/pages/blog/2019-05-23-remuv.md
+++ b/src/pages/blog/2019-05-23-remuv.md
@@ -6,4 +6,4 @@ description: Development platform for building IIoT enabled control solutions
 featuredpost: false
 featuredimage: /img/remuv.png
 ---
-![](/img/remuv-dashboaard.png)
+![](/img/remuv-dashboard.jpg)
